Refactor package structure: rename to Validati10, update README, and add tests for validation features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: azerbaijan_utils
+name: validati10
 description: A comprehensive validator package for Azerbaijan-specific data formats including phone numbers, FIN codes, vehicle plates, and postal codes.
 version: 1.0.0
 homepage: https://github.com/flutterist0/azerbaijan_utils
