--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: validati10
-description: A comprehensive validator package for Azerbaijan-specific data formats including phone numbers, FIN codes, vehicle plates, and postal codes.
-version: 1.0.0
+description: A comprehensive validator package for data formats including phone numbers, FIN codes, vehicle plates, and postal codes.
+version: 2.0.0
 homepage: https://github.com/flutterist0/azerbaijan_utils
 repository: https://github.com/flutterist0/azerbaijan_utils
 issue_tracker: https://github.com/flutterist0/azerbaijan_utils/issues
@@ -16,3 +16,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+assets:
+  - assets/rules.json
