--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: validati10
 description: A comprehensive validator package for data formats including phone numbers, FIN codes, vehicle plates, and postal codes.
-version: 2.0.3
+version: 2.0.4
 homepage: https://github.com/flutterist0/validati10
 repository: https://github.com/flutterist0/validati10
 issue_tracker: https://github.com/flutterist0/validati10/issues
@@ -17,5 +17,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
-assets:
-  - assets/rules.json
+flutter:
+  assets:
+    - assets/rules.json
